--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,8 @@ footer{
     background-color: dimgray;
 }
 #mainNav{
-    background-color: dimgray;
+    background-color: transparent;
+    
 }
 #regis{
     height: 100%;
