--- a/css/agency.css
+++ b/css/agency.css
@@ -134,10 +134,10 @@ img::-moz-selection {
 
 #mainNav .navbar-nav .nav-item .nav-link {
   font-size: 90%;
-  font-weight: 400;
+  font-weight: 600;
   padding: 0.75em 0;
   letter-spacing: 1px;
-  color: white;
+  color:#000;
   font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
@@ -165,8 +165,10 @@ img::-moz-selection {
   #mainNav.navbar-shrink {
     padding-top: 0;
     padding-bottom: 0;
-    /* background-color: #212529;  */
-    background-color: dimgray; 
+    font-weight: 600;
+    color: whitesmoke !important;
+    background-color: #fec503; 
+    /* background-color: dimgray;  */
     
   }
   #mainNav.navbar-shrink .navbar-brand {
