--- a/css/style.css
+++ b/css/style.css
@@ -211,6 +211,10 @@ footer{
     background-color: #e0e0e0;
     border-radius: 5px;
   }
+  .bg-blue{
+    background-color: 	#b4e1ff;
+    border-radius: 5px;
+  }
 .footer-align{
   text-align: left;
 }
