--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ footer {
     border-radius: 4px;
     position: fixed;
     bottom: 30px;
-    /* right: 30px; */
+    right: 30px;
     left: 30;
     transition: background-color .3s, opacity .5s, visibility .5s;
     opacity: 0;
