--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,6 @@ footer {
         text-align: center;
     }
 }
-
 @media (max-width: 768px) {
     section {
         padding-top: 80px;
@@ -114,15 +113,12 @@ footer {
         margin-top: 70px;
     }
 }
-
 @media (max-width: 576px) {
     .cohost-footer {
         width: 30%;
         height: auto;
     }
 }
-
-
 /* 
   #Device = Most of the Smartphones Mobiles (Portrait)
   #Screen = B/w 320px to 479px 
@@ -229,7 +225,9 @@ red {
 blue {
     color:  blue;
 }
-
+white{
+    color: white;
+}
 .border-radius {
     border-radius: 3px;
 }
