--- a/css/style.css
+++ b/css/style.css
@@ -200,6 +200,11 @@ input[type=number] {
     border-radius: 5px;
 }
 
+
+/* .mark4:hover {
+    color: black;
+} */
+
 .responsive {
     width: 100%;
     height: auto;
